--- a/bloc/index.html
+++ b/bloc/index.html
@@ -18,7 +18,7 @@
 		},0);
 	</script>  
 	<script>
-		window.ENVPATH = /www\.xiaogangji\.com/.test(window.location)?"http://47.105.42.195:8081/":"http://localhost:8081/";
+		window.ENVPATH = /47\.105\.42\.195/.test(window.location)?"http://47.105.42.195:8081/":"http://localhost:8081/";
 	</script>
 	<script src="assets/ajax.js"></script>
 </head>
