--- a/bloc/index.html
+++ b/bloc/index.html
@@ -13,9 +13,9 @@
 	<link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet"> 
     <script src="assets/js/highlight.min.js"></script>  
 	<script>
-		setTimeout(function(){
-			hljs.initHighlightingOnLoad();
-		},0);
+		// setTimeout(function(){
+		// 	hljs.initHighlightingOnLoad();
+		// },0);
 	</script>  
 	<script>
 		window.ENVPATH = /47\.105\.42\.195/.test(window.location)?"http://47.105.42.195:8081/":"http://localhost:8081/";
