环境变量配置

--- a/bloc/index.html
+++ b/bloc/index.html
@@ -27,6 +27,7 @@
 			window.ENVPATH = "http://localhost:8081/"
 		}
 	</script>
+	<script type="text/javascript" src="js/common.js"></script>
 	<script src="assets/ajax.js"></script>
 </head>
 <body>
