--- a/nodejs/demo.html
+++ b/nodejs/demo.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="http://47.105.42.195/assets/ajax.js"></script>
-    <script src="http://cdn.socket.io/stable/socket.io.js"></script>
+    <script src="http://cdn.socket.io/socket.io-1.3.5.js"></script>
 </head>
 
 <body>
@@ -21,16 +21,16 @@
         contentType: "application/json",
         data: { name: "chenze", age: "25" },
         success: (data) => {
-            console.log(data);
             document.body.innerHTML = data.name + ":" + data.age;
         }
     });
 
-    var socket = io.connect('http://localhost');
-    socket.on('news', function (data) {
-        console.log(data);
-        socket.emit('my other event', { my: 'data' });
-    });
+    // var socket = io.connect('http://localhost:9999');
+    // socket.on('news', function (data) {
+    //     debugger;
+    //     console.log(data);
+    //     socket.emit('aaa', { my: 'data' });
+    // });
 
 </script>
 
